--- a/encoder/README.asciidoc
+++ b/encoder/README.asciidoc
@@ -93,7 +93,9 @@ ____
 п**оо**бещать ⟷ п**оа**бещать
 ____
 +
-`*э*`, `*е*`, `*ы*`, `*и*` or (`*а*`, `*я*` if after `*ж*`, `*ц*`, `*ш*`, `*ч*`, `*щ*`)  followed by `*э*`, `*е*`, `*ы*`, `*и*` → `*2*`
+`*э*`, `*е*`, `*ы*`, `*и*` followed by `*э*`, `*е*`, `*ы*`, `*и*` → `*2*`
++
+`*а*`, `*я*` after `*ж*`, `*ц*`, `*ш*`, `*ч*`, `*щ*` and followed by `*э*`, `*е*`, `*ы*`, `*и*` → `*2*
 +
 ____
 хокк**ии**ст ⟷ хок**еи**ст
