--- a/encoder/README.asciidoc
+++ b/encoder/README.asciidoc
@@ -25,15 +25,15 @@ toc::[]
 
 The character set used in the resulting code depends on provided `*vowels*` encoding mode value:
 
-* 21 symbols are used with *ignore* vowels encoding mode
+* 21 symbols are used with `*ignore*` vowels encoding mode
 +
 `*б*`, `*в*`, `*г*`, `*д*`, `*ж*`, `*з*`, `*й*`, `*к*`, `*л*`, `*м*`, `*н*`, `*п*`, `*р*`, `*с*`, `*т*`, `*ф*`, `*х*`, `*ц*`, `*ч*`, `*ш*`, `*щ*`
-* 26 symbols are used with *encode_first* vowels encoding mode
+* 26 symbols are used with `*encode_first*` vowels encoding mode
 +
 `*б*`, `*в*`, `*г*`, `*д*`, `*ж*`, `*з*`, `*й*`, `*к*`, `*л*`, `*м*`, `*н*`, `*п*`, `*р*`, `*с*`, `*т*`, `*ф*`, `*х*`, `*ц*`, `*ч*`, `*ш*`, `*щ*`
 +
 plus `*а*`, `*э*`, `*у*`, `*ю*`, `*я*` for the first vowel
-* 29 symbols are used with *encode_all* vowels encoding mode
+* 29 symbols are used with `*encode_all*` vowels encoding mode
 +
 `*б*`, `*в*`, `*г*`, `*д*`, `*ж*`, `*з*`, `*й*`, `*к*`, `*л*`, `*м*`, `*н*`, `*п*`, `*р*`, `*с*`, `*т*`, `*ф*`, `*х*`, `*ц*`, `*ч*`, `*ш*`, `*щ*`
 +
