--- a/encoder/README.asciidoc
+++ b/encoder/README.asciidoc
@@ -1,6 +1,7 @@
 = Russian Phonetic Encoder
 Nikolay Papakha
 :toc:
+:toc-placement!:
 :!toc-title:
 :toclevels: 4
 ifdef::env-github[]
@@ -13,10 +14,12 @@ endif::[]
 ifndef::env-github[]
 endif::[]
 
+Russian Phonetic encoder accepts the word with Russian characters in `*а-я*` range and produces a phonetic code.
+
 :url-throughput-benchmark: https://github.com/papahigh/elasticsearch-russian-phonetics/blob/master/benchmark/throughput.asciidoc
 :url-distribution-benchmark: https://github.com/papahigh/elasticsearch-russian-phonetics/blob/master/benchmark/distribution.asciidoc
 
-Russian Phonetic encoder accepts the word with Russian characters in `*а-я*` range and produces a phonetic code.
+toc::[]
 
 == Character set
 
