--- a/esplugin/README.asciidoc
+++ b/esplugin/README.asciidoc
@@ -1,6 +1,14 @@
 = Elasticsearch plugin for Russian phonetic analysis
 Nikolay Papakha
-
+ifdef::env-github[]
+:tip-caption: :bulb:
+:note-caption: :paperclip:
+:important-caption: :heavy_exclamation_mark:
+:caution-caption: :fire:
+:warning-caption: :warning:
+endif::[]
+ifndef::env-github[]
+endif::[]
 
 In order to build Elasticsearch Plugin distributions and/or run integration tests use the following:
 
@@ -8,3 +16,10 @@ In order to build Elasticsearch Plugin distributions and/or run integration test
 ----
 ./gradlew build
 ----
+
+The assembled plugin can be found in the `*build/distributions*` directory. Follow the link:https://www.elastic.co/guide/en/elasticsearch/plugins/current/plugin-management-custom-url.html[official instruction] to install the plugin.
+
+[IMPORTANT]
+====
+Build requires JDK 9 or later.
+====
