--- a/README.asciidoc
+++ b/README.asciidoc
@@ -35,11 +35,11 @@ compared in encoding throughput benchmarks.
 Results for {url-misspellings-benchmark}[matching misspellings and typos], {url-distribution-benchmark}[distribution] and {url-throughput-benchmark}[encoding throughput] benchmarks.
 ====
 
-Encoding algorithm extensively employs russian phonetic and orthographic rules in order to fill
-the inconsistency gap between spelling and pronunciation.
+Encoding algorithm extensively employs phonetic and orthographic rules in order to fill
+the inconsistency gap between spelling and pronunciation in Russian Language.
 
 [source,intent=0]
-._Examples of spelling and pronunciation inconsistency in Russian Language_
+._Examples of spelling and pronunciation inconsistency_
 ----
 вдры[зг]        ⟷    вдры[ск]
 слове[тск]ий    ⟷    славе[цк]ий
