--- a/encoder/README.asciidoc
+++ b/encoder/README.asciidoc
@@ -87,7 +87,7 @@ else drop the first letter and apply link:#first-vowel-mapping[*rule 3*] for the
 
 . `*я*` after `*б*`, `*в*`, `*г*`, `*д*`, `*з*`, `*к*`, `*л*`, `*м*`, `*н*`, `*п*`, `*р*`, `*с*`, `*т*`, `*ф*`, `*х*` transforms to `*2*`. Otherwise, `*я*` transforms to `*1*`
 
-. in order to keep consistency with link:#rule-2[*rule 2*], reduce sequences of vowels having near-similar sound:
+. in order to keep consistency with link:#rule-2[*rule 2*], reduce the following sequences of vowels having near-similar sound:
 +
 `*ао*` `*оа*` `*оо*` `*аа*` → `*1*`
 +
