--- a/esplugin/README.asciidoc
+++ b/esplugin/README.asciidoc
@@ -19,7 +19,4 @@ In order to build Elasticsearch Plugin distributions and/or run integration test
 
 The assembled plugin can be found in the `*build/distributions*` directory. Follow the link:https://www.elastic.co/guide/en/elasticsearch/plugins/current/plugin-management-custom-url.html[official instruction] in order to install the plugin.
 
-[IMPORTANT]
-====
-Build requires `JAVA_HOME` environment variable pointing to JDK 9 or later.
-====
+IMPORTANT: Build requires `JAVA_HOME` environment variable pointing to JDK 9 or later.
