--- a/encoder/README.asciidoc
+++ b/encoder/README.asciidoc
@@ -366,6 +366,6 @@ unvoiced consonant transforms to voiced if followed by voiced, except `*в*`
 ____
 моло**тьб**а → моло**дьб**а
 
-чувс**тв**о → чувс**тв**о
+чувс**тв**о → чус**тв**о
 ____
 
